--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/react-dom": "^18.0.2",
     "css-properties": "^2.0.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
