--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.4.3",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "sass": "^1.56.1"
   },
   "scripts": {
     "start": "react-scripts start",
